fix scroll button to avoid page jump re-fix CU header with button update

--- a/src/page-sections/colleges-and-universities/custom-header/custom-header.module.scss
+++ b/src/page-sections/colleges-and-universities/custom-header/custom-header.module.scss
@@ -60,7 +60,7 @@ p {
 }
 
 #toc {
-  margin-top: 23rem;
+  margin-top: 26rem;
   border-top: $darkGrey 1px solid;
 
   section {
